// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`furet-ui-header-page-singleton component click can_modify : save 1`] = `
<header
  id="header_page"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      />
    </div>
     
    <div
      class="level-right"
    />
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <a
      class="button is-warning is-outlined"
    >
      <span
        class="icon"
      >
        <span
          class="icon"
        >
          <i
            class="fa fa-times fa-lg"
          />
        </span>
      </span>
       
      <span>
        [object Promise]
      </span>
    </a>
     
    <button
      class="button is-primary is-outlined"
    >
      <span
        class="icon"
      >
        <span
          class="icon"
        >
          <i
            class="fa fa-pencil-alt fa-lg"
          />
        </span>
      </span>
       
      <span>
        [object Promise]
      </span>
    </button>
     
    <button
      class="button is-primary is-outlined"
    >
      <span
        class="icon"
      >
        <span
          class="icon"
        >
          <i
            class="fa fa-save fa-lg"
          />
        </span>
      </span>
       
      <span>
        [object Promise]
      </span>
    </button>
     
  </div>
</header>
`;

exports[`furet-ui-header-page-singleton component click can_modify snapshot 1`] = `
<header
  id="header_page"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      />
    </div>
     
    <div
      class="level-right"
    />
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
    <button
      class="button is-primary is-outlined"
    >
      <span
        class="icon"
      >
        <span
          class="icon"
        >
          <i
            class="fa fa-pencil-alt fa-lg"
          />
        </span>
      </span>
       
      <span>
        [object Promise]
      </span>
    </button>
     
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-header-page-singleton component snapshot minimum 1`] = `
<header
  id="header_page"
>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <h2
        class="level-item is-size-3"
      >
        Title
      </h2>
       
      <span
        class="level-item"
      />
    </div>
     
    <div
      class="level-right"
    />
  </div>
   
  <div
    class="buttons is-grouped is-centered"
  >
    <!---->
     
    <!---->
     
    <!---->
     
  </div>
</header>
`;

exports[`furet-ui-resource-singleton component furet-ui-resource-singleton: snapshot 1`] = `
<section>
  <div
    class="loading-overlay is-active is-full-page"
  >
    <div
      class="loading-background"
    />
     
    <div
      class="loading-icon"
    />
  </div>
   
  <header
    id="header_page"
    name="furet-ui-page"
  >
    <nav
      class="level"
    >
      <div
        class="level-left"
      >
        <div
          class="level-item content"
        >
          <h1
            class="is-large"
          >
            Entry 1
          </h1>
        </div>
      </div>
    </nav>
     
    <div
      class="buttons is-grouped is-centered"
    >
      <!---->
       
      <button
        class="button is-primary is-outlined"
      >
        <span
          class="icon"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-pencil-alt fa-lg"
            />
          </span>
        </span>
         
        <span>
          [object Promise]
        </span>
      </button>
       
      <!---->
       
    </div>
  </header>
   
  <div
    class="section"
  >
    <div
      id="id"
    >
      <div
        class="columns"
      >
        <div
          class="column"
        >
          <span
            class="is-primary is-top is-medium b-tooltip"
            data-label=""
            name="title"
            style="transition-delay: 0ms; width: 100%;"
          >
            <div
              class="field"
              style="width: inherit;"
            >
              <label
                class="label"
              >
                Title
              </label>
               
              <div>
                <span>
                  Entry 1
                </span>
              </div>
               
              <!---->
            </div>
          </span>
        </div>
         
        <div
          class="column"
        >
          <span
            class="is-primary is-top is-medium b-tooltip"
            data-label=""
            name="color"
            style="transition-delay: 0ms; width: 100%;"
          >
            <div
              class="field"
              style="width: inherit;"
            >
              <label
                class="label"
              >
                Color
              </label>
               
              <div>
                <span>
                  red
                </span>
              </div>
               
              <!---->
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <nav
    class="level"
  >
    <div
      class="level-left"
    >
      <div
        class="level-item content"
      >
        <h1
          class="is-large"
        >
          Entry 1
        </h1>
      </div>
    </div>
  </nav>
</section>
`;
